--- a/pregunta-familiar.html
+++ b/pregunta-familiar.html
@@ -5,8 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="main-mio.css"/>
-    <title>Tarea 6</title>
+    <link rel="stylesheet" href="main.css"/>
+    <title>Tarea 06 - Pregunta Familiar</title>
 </head>
 <body>
 
@@ -14,6 +14,7 @@
     <label for="cantidad-integrantes">Ingrese la cantidad de integrantes de la Familia</label>
     <input type="number" id="cantidad-integrantes"/>
     <button type="button" id="siguiente-paso">Siguiente</button>
+    <p></p>
 
     <div id="integrantes">
 
@@ -30,6 +31,6 @@
     <button type="reset" id="resetear">Reiniciar Consulta</button>
 </form>
 
-<script type="text/javascript" src="tarea-clase-06.js"></script>
+<script type="text/javascript" src="pregunta-familiar.js"></script>
 </body>
 </html>
