--- a/salario-familia.html
+++ b/salario-familia.html
@@ -13,15 +13,17 @@
     <h1>Calculo del salario de la familia</h1>
 
 <form id="calculador-edades">
-    <label for="cantidad-integrantes">Ingrese el salario anual del integrante: </label>
-    <input type="number" id="cantidad-integrantes"/>
+    <label for="cantidad-integrantes">Ingrese el salario anual del integrante ($): </label>
+    <input type="number" id="salario-anual-integrante"/>
     <button type="button" id="boton-agregar">Agregar</button>
     <button type="button" id="boton-quitar">Quitar</button>
+    <p></p>
     <p></p>
 
     <div id="integrantes">
 
     </div>
+    <p></p>
 
     <button type="button" id="calcular" class="oculto">Calcular</button>
 
