--- a/pregunta-familiar.html
+++ b/pregunta-familiar.html
@@ -32,5 +32,6 @@
 </form>
 
 <script type="text/javascript" src="pregunta-familiar.js"></script>
+<script type="text/javascript" src="prueba-familiar.js"></script>
 </body>
 </html>
